Made correct bit stuffing

--- a/SerialPorts/COM_Ports_Packages/COM_Ports_Packages.csproj
+++ b/SerialPorts/COM_Ports_Packages/COM_Ports_Packages.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Core\COM.cs" />
     <Compile Include="Core\ObservableObject.cs" />
     <Compile Include="Core\RelayCommand.cs" />
+    <Compile Include="Core\Stuffing.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
