Add CRC and other

--- a/SerialPorts/COM_Ports_CRC/COM_Ports_CRC.csproj
+++ b/SerialPorts/COM_Ports_CRC/COM_Ports_CRC.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Core\CheckSum.cs" />
     <Compile Include="Core\COM.cs" />
     <Compile Include="Core\ObservableObject.cs" />
     <Compile Include="Core\RelayCommand.cs" />
